# codex-wui

./: README.md  index.html  package-lock.json  package.json  tailwind.config.mjs  tsconfig.electron.json  vite.config.ts
.playwright-cli/: 02-main-initial.yml  debug-after-click.yml  debug-now.yml  page-2026-02-07T12-13-32-446Z.yml  page-2026-02-07T12-13-42-209Z.yml  page-2026-02-07T12-40-53-862Z.yml  page-2026-02-07T12-40-55-851Z.yml  page-2026-02-07T12-41-05-791Z.yml  page-2026-02-07T12-41-29-780Z.yml  page-2026-02-07T12-42-15-104Z.yml
electron/: acp-service.ts  auth-service.ts  codex-model-service.ts  codex-service.ts  db.ts  gemini-service.ts  main.ts  preload.ts  test-services.ts
electron/services/: auth.ts  codex.ts  db.ts  fs-ops.ts  models.ts  shell.ts  teams.ts  utils.ts
output/playwright/: 03-after-send.yml  04-after-reload.yml  mock-tauri-init.js  playwright-cli.smoke.json
scripts/: dev-watchdog.sh  playwright-smoke-typed.sh
scripts/playwright/: mock-tauri-init.js
src/: App.tsx  index.css  main.tsx  tauri-api.ts  themes.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  codex.rs  db.rs  fs_ops.rs  lib.rs  models.rs  shell.rs  teams.rs  utils.rs
src/api/: tauri-api.ts
src/components/: ApprovalDialog.tsx  ChatPanel.tsx  CliControlPanel.tsx  ContextMenu.tsx  ErrorBoundary.tsx  FileIcon.tsx  MessageBubble.tsx  ModelSelector.tsx  PdfViewer.tsx  ProgressCard.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  ThemeSelector.tsx  UpdateChecker.tsx  WelcomeScreen.tsx
src/i18n/: en.ts  (+2 more)
(+4 files in other folders)
